fixed broken css on galleries

--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,3 +1,76 @@
+// Place all the styles related to the Galleries controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+.galleries-page {
+  font-family: "Roboto", sans-serif;
+  color: #5f5f5f;
+  background: #FFFFFF;
+  padding: 45px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+	margin-bottom: 60px;
+	.page-header {
+    margin: 0 auto 50px;
+    h2 {
+      font-weight: 200;
+      display: inline;
+    }
+	}
+  #map {
+    width: 500px;
+    height: 500px;
+    margin: 0;
+  }
+  #showmap{
+    width: 500px;
+    height: 500px;
+    margin: 0;
+    display: inline-block;
+
+  }
+  .gallery-details{
+    float: right;
+    width: 500px;
+    display: inline-block;
+    border-left: 8px solid #e0e0e0;
+    padding-left: 8px;
+    .detail{
+      width: 100%;
+      p{
+        display: block;
+        float: right;
+      }
+    }
+
+  }
+  h3 {
+    font-weight: 200;
+    text-align: center;
+  }
+  .search-toggle {
+    float: right;
+    text-transform: uppercase;
+    outline: 0;
+    background: #a5637c;
+    // background-color: #a5637c;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    text-decoration: none;
+
+    &:hover{
+      text-decoration: none;
+      color: #FFF;
+    }
+  }
+}
+
+
+
+
 .new-gallery-page{
 	width: 500px;
 	margin: auto;
